import java.text.SimpleDateFormat

plugins {
    id 'java-library'
    id 'maven-publish'
}

group 'com.reportmill'
version  new SimpleDateFormat("yyyy.MM").format(new Date())

sourceSets.main.java.srcDirs = ['src']
sourceSets.main.resources.srcDirs = ['src']

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
}

dependencies {
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}

tasks.publish.doFirst() {
    def user = System.getenv("GITHUB_USER")
    def pw = System.getenv("GITHUB_TOKEN")
    println "Publish start user:$user"
}

publishing {

    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/reportmill/SnapKit"
            credentials {
                username = System.getenv("GITHUB_USER")
                password = System.getenv("GITHUB_TOKEN")
                println "Publish user: username=$username"
            }
        }
    }

    publications {
        gpr(MavenPublication) {
            artifactId 'snapkit'
            from(components.java)
        }
    }
}